added user component - to create and save in database from api route

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -21,3 +21,33 @@ $cyan: #6cb2eb;
 
 
 $fa-font-path:"../webfonts";
+.blue {
+    color: $blue;
+}
+.indigo {
+    color: $indigo;
+}
+.purple {
+    color: $purple;
+}
+.pink {
+    color: $pink;
+}
+.red {
+    color: $red;
+}
+.orange {
+    color: $orange;
+}
+.yellow {
+    color: $yellow;
+}
+.green {
+    color: $green;
+}
+.teal {
+    color: $teal;
+}
+.cyan {
+    color: $cyan;
+}
